# ArmTTS-Cpp

./: CMakeLists.txt  LICENSE  README.md
src/armtts/: CMakeLists.txt  armtts.pc
src/armtts/include/: engine.hpp  textPreprocessor.hpp  utilities.hpp
src/armtts/src/: engine.cpp  textPreprocessor.cpp  utilities.cpp
test_project/: CMakeLists.txt
test_project/models/: arm-gor.onnx
test_project/src/: main.cpp
tests/unit/: CMakeLists.txt
tests/unit/src/: armtts.cpp
